--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
                  <p>Hola soy</p>
                  <h1 id="autowrite-text" class="autowrite-text"></h1>
                  <h2>Desarrollador Backend</h2>
+                 <br>
+                 <p>Contactame y juntos crearemos nuevas y mejores soluciones.</p>
                  <div class="banner-icon">
                     <div class="icon">
                          <a href="mailto:luisrbn10@outlook.es?Subject=Oferta laboral"><i class="far fa-envelope"></i></a>
@@ -25,7 +27,10 @@
                          <a href="https://api.whatsapp.com/send?phone=3227603630" target="_blank"><i class="fab fa-whatsapp"></i></a>
                  </div> 
                  <div class="icon">
-                    <a href="https://drive.google.com/file/d/15Br_Y1qwbUHK-eyptPx30E3D8rk6tFmU/view?usp=sharing" download="Dev_cv.pdf" class="cv">CV</a>
+                    <a href="https://www.linkedin.com/in/developerbackend/" target="_blank"><i class="fab fa-linkedin"></i></i></a>
+            </div>
+                 <div class="icon">
+                    <a href="https://drive.google.com/file/d/1xximbxAnwrXPiahbTZb4E2Wpdn1BzL80/view?usp=sharing" download="Dev_cv.pdf" class="cv">CV</a>
             </div>       
         </div>
     </div>
@@ -135,7 +140,7 @@
                          <i class="fas fa-stethoscope"></i>
                          <p class="name-project">Servicios Medicos</p> 
                          <p>
-                             Desarrollo de una API REST para una aplicación de gestión de citas medicas, utilizando Java, Spring Boot y Mysql. 
+                             Desarrollo de una API REST para una aplicación de gestión de citas medicas, utilizando Java, Spring Boot, Hibernate y Mysql. 
                              Implementé autenticación de usuarios y manejo de permisos con Json Web Tokens.
                          </p>
                          <div class="technologies-projects">
@@ -157,7 +162,7 @@
                      <i class="fas fa-map-marker-alt"></i>
                          <p class="name-project">Servicios de trasnporte</p> 
                          <p>La API de Servicios de Transporte Básica, permite al usuario registrarse, iniciar sesión, solicitar un servicio de transporte proporciando 
-                             un lugar de origen y destino. 
+                             un lugar de origen y destino. Empleando tecnologias como Java, Spring Boot, Spring Data JPA. 
                          </p>
                          <div class="technologies-projects">
                              <div class="use-technologies">
@@ -170,7 +175,7 @@
                                  Hibernate
                              </div>
                              <div>
-                                 <a href="https://github.com/GonzalezSanchezLuis/Transport-Api" class="link-project" target="_blank"><i class="fab fa-github"></i></a>
+                                 <a href="https://github.com/GonzalezSanchezLuis/Api-mobility" class="link-project" target="_blank"><i class="fab fa-github"></i></a>
                          </div>
                  </div>
                  </div>
