Agregando enlaces de proyectos

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/css/app.css">
     <link rel="shortcut icon" href="src/img/favicon.ico" type="image/x-icon">
-    <title>Luis Gonzáléz</title>
+    <title>Luis González</title>
 </head>
 <body>
     <header id="header" class="header">    
@@ -29,9 +29,9 @@
                  <div class="icon">
                     <a href="https://www.linkedin.com/in/developerbackend/" target="_blank"><i class="fab fa-linkedin"></i></i></a>
             </div>
-                 <div class="icon">
+                 <!-- <div class="icon">
                     <a href="https://drive.google.com/file/d/1xximbxAnwrXPiahbTZb4E2Wpdn1BzL80/view?usp=sharing" download="Dev_cv.pdf" class="cv">CV</a>
-            </div>       
+            </div>        -->
         </div>
     </div>
         </div>
@@ -141,7 +141,8 @@
                          <p class="name-project">Servicios Medicos</p> 
                          <p>
                              Desarrollo de una API REST para una aplicación de gestión de citas medicas, utilizando Java, Spring Boot, Hibernate y Mysql. 
-                             Implementé autenticación de usuarios y manejo de permisos con Json Web Tokens.
+                             Implementé autenticación de usuarios y manejo de permisos con Json Web Tokens. Puedes ver su funcionamiento <a href="https://doctor-on-line.netlify.app/" target="_blank" class="link-project"> aqui <i class="fas fa-external-link-alt"></i></a>
+                             y el diseño de la base de datos <a href="https://drawsql.app/teams/luis-gonzales-sanchez/diagrams/medical-api" target="_blank" class="link-project">aqui <i class="fas fa-external-link-alt"></i></a> 
                          </p>
                          <div class="technologies-projects">
                              <div class="use-technologies">
@@ -162,7 +163,8 @@
                      <i class="fas fa-map-marker-alt"></i>
                          <p class="name-project">Servicios de trasnporte</p> 
                          <p>La API de Servicios de Transporte Básica, permite al usuario registrarse, iniciar sesión, solicitar un servicio de transporte proporciando 
-                             un lugar de origen y destino. Empleando tecnologias como Java, Spring Boot, Spring Data JPA. 
+                             un lugar de origen y destino. Empleando tecnologias como Java, Spring Boot, Spring Data JPA. Puedes ver su funcionamiento <a href="https://fiver-online.netlify.app/" target="_blank" class="link-project"> aqui <i class="fas fa-external-link-alt"></i></a>
+                             y el diseño de la base de datos <a href="https://app.sqldbm.com/MySQL/DatabaseExplorer/p295805/#" target="_blank" class="link-project">aqui <i class="fas fa-external-link-alt"></i></a> 
                          </p>
                          <div class="technologies-projects">
                              <div class="use-technologies">
