Agregando enlaces de documentacón

--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
                          <p class="name-project">Servicios Medicos</p> 
                          <p>
                              Desarrollo de una API REST para una aplicación de gestión de citas medicas, utilizando Java, Spring Boot, Hibernate y Mysql. 
-                             Implementé autenticación de usuarios y manejo de permisos con Json Web Tokens. Puedes ver su funcionamiento <a href="https://doctor-on-line.netlify.app/" target="_blank" class="link-project"> aqui <i class="fas fa-external-link-alt"></i></a>
-                             y el diseño de la base de datos <a href="https://drawsql.app/teams/luis-gonzales-sanchez/diagrams/medical-api" target="_blank" class="link-project">aqui <i class="fas fa-external-link-alt"></i></a> 
+                             Implementé autenticación de usuarios y manejo de permisos con Json Web Tokens. <a href="https://doctor-on-line.netlify.app/" target="_blank" class="link-project">Puedes ver su funcionamiento <i class="fas fa-external-link-alt"></i></a>, 
+                              <a href="https://drawsql.app/teams/luis-gonzales-sanchez/diagrams/medical-api" target="_blank" class="link-project">diseño de la base de datos <i class="fas fa-external-link-alt"></i></a>  y <a href="https://medical-api.up.railway.app/swagger-ui/index.html" class="link-project">documentación <i class="fas fa-external-link-alt"></i> </a> .
                          </p>
                          <div class="technologies-projects">
                              <div class="use-technologies">
@@ -163,8 +163,8 @@
                      <i class="fas fa-map-marker-alt"></i>
                          <p class="name-project">Servicios de trasnporte</p> 
                          <p>La API de Servicios de Transporte Básica, permite al usuario registrarse, iniciar sesión, solicitar un servicio de transporte proporciando 
-                             un lugar de origen y destino. Empleando tecnologias como Java, Spring Boot, Spring Data JPA. Puedes ver su funcionamiento <a href="https://fiver-online.netlify.app/" target="_blank" class="link-project"> aqui <i class="fas fa-external-link-alt"></i></a>
-                             y el diseño de la base de datos <a href="https://app.sqldbm.com/MySQL/DatabaseExplorer/p295805/#" target="_blank" class="link-project">aqui <i class="fas fa-external-link-alt"></i></a> 
+                             un lugar de origen y destino. Empleando tecnologias como Java, Spring Boot, Spring Data JPA. <a href="https://fiver-online.netlify.app/" target="_blank" class="link-project">  Puedes ver su funcionamiento  <i class="fas fa-external-link-alt"></i></a>,
+                             <a href="https://app.sqldbm.com/MySQL/DatabaseExplorer/p295805/#" target="_blank" class="link-project">  diseño de la base de datos <i class="fas fa-external-link-alt"></i></a> y <a href="https://fiver.up.railway.app/swagger-ui/index.html" class="link-project">documentación <i class="fas fa-external-link-alt"></i> </a> .
                          </p>
                          <div class="technologies-projects">
                              <div class="use-technologies">
@@ -202,8 +202,7 @@
              </div>
              <footer>
                  <div class="end">
-                     <p class="text-end">Sitio web diseñado en <em>Figma</em> y codificado en <em>Visual Studio Code,</em> codificado usando el motor de 
-                         plantillas de thymeleaf, java, spring Boot, javaScript y el preprocesador de css Saas.
+                     <p class="text-end">Sitio web diseñado en <em>Figma</em> y codificado en <em>Visual Studio Code,</em> codificado usando  Html,  JavaScript y el preprocesador de css Saas.
                          Puedes ver el codigo aqui <a href="https://github.com/GonzalezSanchezLuis/Portafolios" class="link-end"><i class="fab fa-github"></i></a>             
                      </p>
                  </div>
